对消防点进行前往执行后，路线计算的时间应该按照时分显示而非秒，距离应该显示公里;【智慧消防】对消防点进行前往执行后，再放弃执行，没有放弃执行的记录产生;

--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireMapDetail.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireMapDetail.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="aUt-lD-aje">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="aUt-lD-aje">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -37,10 +37,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3o7-9C-tEm" customClass="YQImplementView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="20" y="387" width="335" height="240"/>
+                                <rect key="frame" x="10" y="387" width="355" height="240"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxq-Oh-oXU">
-                                        <rect key="frame" x="225" y="0.0" width="110" height="50"/>
+                                        <rect key="frame" x="245" y="0.0" width="110" height="50"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="110" id="lX5-DV-aCA"/>
@@ -63,18 +63,18 @@
                                         </connections>
                                     </button>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jI0-Kx-SDE">
-                                        <rect key="frame" x="0.0" y="60" width="335" height="126"/>
+                                        <rect key="frame" x="0.0" y="60" width="355" height="120"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="implementCell" textLabel="xE5-qQ-Rwv" style="IBUITableViewCellStyleDefault" id="pQR-xK-ncO">
-                                                <rect key="frame" x="0.0" y="28" width="335" height="44"/>
+                                                <rect key="frame" x="0.0" y="28" width="355" height="44"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pQR-xK-ncO" id="7bp-LU-2Uz">
-                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="355" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xE5-qQ-Rwv">
-                                                            <rect key="frame" x="15" y="0.0" width="305" height="43.5"/>
+                                                            <rect key="frame" x="15" y="0.0" width="325" height="43.5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -90,10 +90,10 @@
                                         </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FyJ-gP-qhA" userLabel="footerView">
-                                        <rect key="frame" x="0.0" y="196" width="335" height="44"/>
+                                        <rect key="frame" x="0.0" y="190" width="355" height="50"/>
                                         <subviews>
                                             <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0e6-NU-ivH">
-                                                <rect key="frame" x="80" y="0.0" width="255" height="44"/>
+                                                <rect key="frame" x="150" y="0.0" width="205" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="放弃执行"/>
                                                 <connections>
@@ -101,7 +101,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3fU-WA-DTW">
-                                                <rect key="frame" x="100" y="0.0" width="235" height="44"/>
+                                                <rect key="frame" x="150" y="0.0" width="205" height="50"/>
                                                 <color key="backgroundColor" red="0.44571961450000003" green="0.68072509299999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="立即执行">
@@ -112,10 +112,10 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RC7-jG-wKk">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="44"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距离" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jvB-2x-peL">
-                                                        <rect key="frame" x="1" y="13" width="35" height="19.5"/>
+                                                        <rect key="frame" x="1" y="16" width="35" height="19.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="35" id="n21-7Q-j1U"/>
                                                         </constraints>
@@ -124,13 +124,13 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJP-3W-ylj" userLabel="分钟">
-                                                        <rect key="frame" x="36" y="27" width="64" height="17"/>
+                                                        <rect key="frame" x="36" y="33" width="114" height="17"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QWa-iM-ZdS" userLabel="相距米">
-                                                        <rect key="frame" x="36" y="0.0" width="64" height="17"/>
+                                                        <rect key="frame" x="36" y="0.0" width="114" height="17"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -151,14 +151,14 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="3fU-WA-DTW" firstAttribute="leading" secondItem="FyJ-gP-qhA" secondAttribute="leading" constant="100" id="0Xp-VS-F2N"/>
+                                            <constraint firstItem="3fU-WA-DTW" firstAttribute="leading" secondItem="FyJ-gP-qhA" secondAttribute="leading" constant="150" id="0Xp-VS-F2N"/>
                                             <constraint firstItem="0e6-NU-ivH" firstAttribute="top" secondItem="FyJ-gP-qhA" secondAttribute="top" id="5GY-mv-50P"/>
                                             <constraint firstItem="RC7-jG-wKk" firstAttribute="top" secondItem="FyJ-gP-qhA" secondAttribute="top" id="7bX-1G-ARs"/>
                                             <constraint firstItem="3fU-WA-DTW" firstAttribute="top" secondItem="FyJ-gP-qhA" secondAttribute="top" id="BKM-pC-LOQ"/>
-                                            <constraint firstAttribute="height" constant="44" id="Iuj-mb-MWh"/>
+                                            <constraint firstAttribute="height" constant="50" id="Iuj-mb-MWh"/>
                                             <constraint firstAttribute="trailing" secondItem="0e6-NU-ivH" secondAttribute="trailing" id="J9q-r4-R8z"/>
                                             <constraint firstAttribute="trailing" secondItem="3fU-WA-DTW" secondAttribute="trailing" id="cno-ud-t7E"/>
-                                            <constraint firstItem="0e6-NU-ivH" firstAttribute="leading" secondItem="FyJ-gP-qhA" secondAttribute="leading" constant="80" id="fjK-qL-LUy"/>
+                                            <constraint firstItem="0e6-NU-ivH" firstAttribute="leading" secondItem="FyJ-gP-qhA" secondAttribute="leading" constant="150" id="fjK-qL-LUy"/>
                                             <constraint firstAttribute="bottom" secondItem="3fU-WA-DTW" secondAttribute="bottom" id="iKs-qQ-qJX"/>
                                             <constraint firstAttribute="bottom" secondItem="RC7-jG-wKk" secondAttribute="bottom" id="kJG-t5-3PL"/>
                                             <constraint firstItem="3fU-WA-DTW" firstAttribute="leading" secondItem="RC7-jG-wKk" secondAttribute="trailing" id="l2W-aj-IQb"/>
@@ -184,11 +184,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="3o7-9C-tEm" firstAttribute="leading" secondItem="eTG-sa-rmW" secondAttribute="leading" constant="20" id="AyN-T2-4Wo"/>
+                            <constraint firstItem="3o7-9C-tEm" firstAttribute="leading" secondItem="eTG-sa-rmW" secondAttribute="leading" constant="10" id="AyN-T2-4Wo"/>
                             <constraint firstItem="MST-xJ-RTB" firstAttribute="top" secondItem="3o7-9C-tEm" secondAttribute="bottom" constant="40" id="Km6-lh-IrZ"/>
                             <constraint firstAttribute="trailing" secondItem="9to-PZ-M0t" secondAttribute="trailing" id="OWC-bd-DaT"/>
                             <constraint firstItem="MST-xJ-RTB" firstAttribute="top" secondItem="9to-PZ-M0t" secondAttribute="bottom" id="QJc-GK-F9c"/>
-                            <constraint firstAttribute="trailing" secondItem="3o7-9C-tEm" secondAttribute="trailing" constant="20" id="Z2o-ah-k73"/>
+                            <constraint firstAttribute="trailing" secondItem="3o7-9C-tEm" secondAttribute="trailing" constant="10" id="Z2o-ah-k73"/>
                             <constraint firstItem="CWc-HI-h9q" firstAttribute="leading" secondItem="eTG-sa-rmW" secondAttribute="leading" constant="10" id="ZdK-Lj-8bg"/>
                             <constraint firstItem="9to-PZ-M0t" firstAttribute="leading" secondItem="eTG-sa-rmW" secondAttribute="leading" id="cWM-Ne-F6j"/>
                             <constraint firstItem="CWc-HI-h9q" firstAttribute="top" secondItem="x3W-3a-JXO" secondAttribute="bottom" constant="10" id="gX2-ZE-rbn"/>
